--- a/sources/inc/shaarli.css
+++ b/sources/inc/shaarli.css
@@ -8,7 +8,7 @@ version: 2.8.2r1
 html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var,optgroup{font-style:inherit;font-weight:inherit;}del,ins{text-decoration:none;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:baseline;}sub{vertical-align:baseline;}legend{color:#000;}input,button,textarea,select,optgroup,option{font-family:inherit;font-size:inherit;font-style:inherit;font-weight:inherit;}input,button,textarea,select{*font-size:100%;}
 
 body { font-family: "Trebuchet MS",Verdana,Arial,Helvetica,sans-serif; font-size:10pt; background-color: #ffffff; }
-input, textarea {
+input, textarea, select {
 	background-color: #dedede;
 	background: -webkit-gradient(linear, 0 0, 0 bottom, from(#dedede), to(#ffffff));
 	background: -webkit-linear-gradient(#dedede, #ffffff);
@@ -227,6 +227,7 @@ cursor:pointer;
 }
 */
 #linklist li.private { background: url('../images/private.png') no-repeat 10px center; padding-left:60px; }
+#linklist li.contributor { background: url('../images/contributor.png') no-repeat 10px center; padding-left:60px; }
 #linklist li  {  padding-left:26px; }
 .private  .linktitle a {color:#969696;}
 .linktitle { font-size:14pt; font-weight:bold; }
@@ -236,6 +237,7 @@ cursor:pointer;
 .linkdate a { background-image:url('../images/calendar.png');padding:2px 0 3px 20px;background-repeat:no-repeat;text-decoration: none; color:#E28E3F;  }
 .linkdate a:hover { color: #F57900 }
 .linkurl { font-size:8pt; color:#4BAA74; }
+.linkauthor { font-size:8pt; color:#4BAA74; font-style: italic;}
 .linkdescription { color:#000; margin-top:0; margin-bottom:12px; font-weight:normal; max-height:400px; overflow:auto; }
 .linkdescription a { text-decoration: none; color:#3465A4; }
 .linkdescription a:hover { color:#F57900; }
@@ -464,3 +466,76 @@ div.dailyEntryDescription { font-size:10pt; }
 
 } 
 
+/* Highlight search results */
+.highlight { background-color: #FFFF33; }
+
+/* Manage users */
+#manageusers {
+    margin: 10px 10px 10px 0px;
+}
+#manageusers form {
+    width: 170px;
+    float: left;
+    margin-left: 15px;
+    margin-bottom: 10px;
+    background: linear-gradient(#555555, #222222);
+    border-radius: 5px 5px 5px 5px;
+    padding: 10px;
+    box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7),
+            -1px 2px 15px rgba(255, 255, 255, 0.4) inset;
+}
+#manageusers .sysadmin {
+    background-color: #555555;
+    background-image: repeating-linear-gradient(135deg, transparent, transparent 20px, rgba(255,255,255,.5) 20px, rgba(255,255,255,.5) 40px);
+}
+#manageusers #createuserbadge {
+    padding-bottom: 11px;
+    background: linear-gradient(#777777, #444444);
+}
+#manageusers h4 {
+    font-weight: bold;
+    color: #ffffff;
+}
+#manageusers select, #manageusers input {
+    margin-top: 6px;
+}
+#manageusers select {
+    width: 170px;
+    height: 25px;
+    cursor: pointer;
+}
+#manageusers input[type=text] {
+    width: 160px;
+    cursor: pointer;
+}
+#manageusers input[type=submit] {
+    font-style: italic;
+    cursor: pointer;
+}
+#manageusers input[type=submit]:disabled {
+    font-style: italic;
+    color: grey;
+    cursor: default;
+}
+#manageusers input[type=submit]:hover {
+    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.3) inset;
+}
+#manageusers input[type=submit]:disabled {
+    box-shadow: 0px 0px 0px rgba(255, 255, 255, 0) inset;
+}
+#manageusers .updateuser {
+    width: 170px;
+    background: linear-gradient(#2b552e, #112212);
+    color: #ffffff;
+} 
+#manageusers .smallsubmit {
+    width: 83px;
+}
+#manageusers .resetpassword {
+    background: linear-gradient(#555555, #222222);
+    color: #ffffff;
+}
+#manageusers .deleteuser {
+    background: linear-gradient(#552b2b, #221111);
+    color: #ffffff;
+}
